--- a/Módulo 3/Desafios/d012 pronto/estilo/style.css
+++ b/Módulo 3/Desafios/d012 pronto/estilo/style.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font-padrao: Verdana, Geneva, Tahoma, sans-serif;
+    --font-titulo: 'Passion One', cursive;
+    --font-texto: 'Sriracha', cursive;
+}
 
 * {
     margin: 0px;
@@ -8,6 +16,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font-padrao);
 }
 
 header {
@@ -19,6 +28,9 @@ header {
 
 header > h1 {
     font-variant: small-caps;
+    font-family: var(--font-titulo);
+    font-size: 10vw;
+    font-weight: lighter;
 }
 
 header a, footer a {
@@ -34,6 +46,8 @@ header a:hover, footer a:hover {
 section {
     padding: 10vh 0px 10vh 30px;
     line-height: 2em;
+    font-family: var(--font-texto);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -47,8 +61,9 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.253);
+    padding: 5px;
 }
 
 footer {
