--- a/Módulo 4/Desafios/d016/estilos/style.css
+++ b/Módulo 4/Desafios/d016/estilos/style.css
@@ -10,26 +10,51 @@ Tela grande ou Desktop: até 1200px
 TV e Tela extragrande:  acima de 1200px
 */
 
-/* 
-    Paleta de cores
-    Verde: #49a09d    
-    Lilás: #5f2c82
-*/
 
 :root {
-    --font-padrao: Arial, Helvetica, sans-serif;
-
+    --font-padrao: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --cor1: #49a09d;
     --cor2: #5f2c82;
 }
 
 * {
     font-family: var(--font-padrao);
-    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
-html {
+hmtl, body {
+    background-color: var(--cor2);
     height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.550);
+}
+
+section#login div#imagem {
+    background: var(--cor2) url(../imagens/metal.jpg) left bottom no-repeat;
+    background-size: cover;
+    height: 200px;
+}
+
+section#login div#formulario {
+    padding: 10px;
 }
