--- a/Módulo 4/Desafios/d016/estilos/style.css
+++ b/Módulo 4/Desafios/d016/estilos/style.css
@@ -2,15 +2,6 @@
 
 /* Versão Mobile First */
 
-/* Typical Device Breakpoints
-Celulares:              até 600px
-iPad ou Tablet:         até 768px
-Laptop e Tela pequena:  até 992px
-Tela grande ou Desktop: até 1200px
-TV e Tela extragrande:  acima de 1200px
-*/
-
-
 :root {
     --font-padrao: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --cor1: #49a09d;
@@ -47,6 +38,8 @@ section#login {
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.550);
+    transition: width .3s, height .3s ;
+    transition-timing-function: ease;
 }
 
 section#login div#imagem {
